# evmu-watch

./: .gitmodules  LICENSE  README.md
EVMU Watch/EVMU Watch WatchKit Extension/: ComplicationController.h  ComplicationController.m  ExtensionDelegate.h  ExtensionDelegate.m  Info.plist  InterfaceController.h  InterfaceController.m
EVMU Watch/EVMU Watch.xcodeproj/: project.pbxproj
EVMU Watch/EVMU Watch.xcodeproj/project.xcworkspace/xcuserdata/andrewapperley.xcuserdatad/: UserInterfaceState.xcuserstate
EVMU Watch/EVMU Watch.xcodeproj/xcuserdata/andrewapperley.xcuserdatad/xcschemes/: xcschememanagement.plist
EVMU Watch/EVMU WatchTests/: EVMU_WatchTests.m
EVMU Watch/EVMU WatchUITests/: EVMU_WatchUITests.m  EVMU_WatchUITestsLaunchTests.m
Legacy/evmu-watch/: AppDelegate.swift  ViewController.swift
Legacy/evmu-watch WatchKit App/: Info.plist
Legacy/evmu-watch WatchKit App/Assets.xcassets/AButton.imageset/: Contents.json
Legacy/evmu-watch WatchKit App/Assets.xcassets/BButton.imageset/: Contents.json
Legacy/evmu-watch WatchKit App/Assets.xcassets/LButton.imageset/: Contents.json
Legacy/evmu-watch WatchKit App/Assets.xcassets/UButton.imageset/: Contents.json
Legacy/evmu-watch-WatchKit-Extension/: EmulatorController.swift  EmulatorSettingsController.swift  Evmu-watch-bridging-header.h  ExtensionDelegate.swift  Info.plist  RomSelectionController.swift
Legacy/evmu-watch-WatchKit-Extension/files/: JetGrindSys2.dci  SoulCalibur.vmi  chaoadv2.dci  extra_bg_lights.vmi  extra_bg_lights.vms  marvel-vs-capcom-2.186.dci  pacman.dci
Legacy/evmu-watch.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Legacy/evmu-watch.xcodeproj/project.xcworkspace/xcuserdata/andrewapperley.xcuserdatad/: UserInterfaceState.xcuserstate
Legacy/evmu-watch.xcodeproj/xcuserdata/andrewapperley.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Legacy/evmu-watch.xcodeproj/xcuserdata/andrewapperley.xcuserdatad/xcschemes/: xcschememanagement.plist
evmu-watch WatchKit App/Assets.xcassets/AppIcon.appiconset/: Contents.json
evmu-watch WatchKit App/Assets.xcassets/DButton.imageset/: Contents.json
evmu-watch WatchKit App/Assets.xcassets/RButton.imageset/: Contents.json
evmu-watch WatchKit App/Base.lproj/: Interface.storyboard
evmu-watch-WatchKit-Extension/: Emulator.swift  EmulatorController.swift  EmulatorRenderer.swift  EmulatorSettingsController.swift  Evmu-watch-bridging-header.h  ExtensionDelegate.swift  Info.plist  InterfaceController.swift  PaletteSelectionController.swift  RomSelectionController.swift  StateManagementController.swift
evmu-watch-WatchKit-Extension/files/: chao adventure.dci  minigame.vmi
evmu-watch.xcodeproj/: project.pbxproj
evmu-watch.xcodeproj/project.xcworkspace/xcuserdata/andrewapperley.xcuserdatad/: UserInterfaceState.xcuserstate
evmu-watch.xcodeproj/xcuserdata/andrewapperley.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
evmu-watch.xcodeproj/xcuserdata/andrewapperley.xcuserdatad/xcschemes/: xcschememanagement.plist
src/EVMU-Watch/Watch Extension/: ExtensionDelegate.m  InterfaceController.m
src/evmu-watch/: CMakeLists.txt
src/evmu-watch/Watch Extension/: ComplicationController.m  ExtensionDelegate.h
src/evmu-watch/Watch/Resources/: Info.plist.in  Prefix.pch
src/evmu-watch/Watch/Watch Extension/: ComplicationController.h  InterfaceController.h
src/evmu-watch/iOS/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
